tests/baselines/reference/YieldExpression16_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression16_es6.ts(1,9): error TS9001: Generators are not currently supported.
tests/cases/conformance/es6/yieldExpressions/YieldExpression16_es6.ts(3,5): error TS1163: 'yield' expression must be contained_within a generator declaration.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression16_es6.ts (2 errors) ====
    function* foo() {
            ~
!!! error TS9001: Generators are not currently supported.
      function bar() {
        yield foo;
        ~~~~~
!!! error TS1163: 'yield' expression must be contained_within a generator declaration.
      }
    }